Completata Estensione OOP